t3stack.yml
---
apiVersion: v1
kind: Service
metadata:
  name: t3stack-service
spec:
  selector:
    app: t3stack
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 9981
#  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: t3stack
  labels:
    app: t3stack
spec:
  replicas: 2
  selector:
    matchLabels:
      app: t3stack
  template:
    metadata:
      labels:
        app: t3stack
    spec:
      containers:
      - name: t3stack
        image: registry.local:5000/t3stack:latest
        ports:
        - containerPort: 9981
